--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ logging.level.org.springframework.security=debug
 
 #spring.mvc.problemdetails.enabled=true
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/url_shortener
+spring.datasource.url=jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5432}/url_shortener
 spring.datasource.username=postgres
 spring.datasource.password=s3cr3t
 spring.datasource.driver-class-name=org.postgresql.Driver
