--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -63,7 +63,8 @@
               "browserTarget": "url-shortener:build:production"
             },
             "development": {
-              "browserTarget": "url-shortener:build:development"
+              "browserTarget": "url-shortener:build:development",
+              "proxyConfig": "src/proxy-config.json"
             }
           },
           "defaultConfiguration": "development"
